[package]
name = "satpass"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.32", features = ["derive"] }
geographiclib-rs = { version = "0.2.5", default-features = false}
predict-rs = "0.1.1"
rayon = "1.10.0"
sgp4 = "2.3.0"

[profile.release]
debug = true
strip = true
lto = true